# optical-spec-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md  golden_cases.json  llm_cases.json  run_benchmark.py  run_llm_benchmark.py  run_semantic_benchmark.py  run_workflow_benchmark.py  semantic_cases.json  workflow_cases.json
docs/: README.md  adapter_architecture.md  adapter_maturity_model.md  adapter_mvp_v0.7.md  adapter_native_golden_cases.md  adapter_native_golden_cases.zh-CN.md  adapter_native_golden_coverage_matrix.md  adapter_native_golden_coverage_matrix.zh-CN.md  adapter_native_source_monitor_mapping.md  adapter_native_source_monitor_mapping.zh-CN.md  adapter_support_matrix.md  agent_command_center.md  agent_command_center.zh-CN.md  agent_studio_chinese_guided_tutorial.md  agent_studio_demo_checklist.md  agent_studio_demo_feedback.md  agent_studio_demo_runbook.md  agent_studio_demo_storyboard.md  agent_studio_demo_troubleshooting.md  agent_studio_frontend_roadmap.md  agent_trace_timeline.md  agent_trace_timeline.zh-CN.md  ambiguous_requirement_matching.md  ambiguous_requirement_matching.zh-CN.md  api_agent_contract.md  api_contract.md  api_curl_examples.md  api_error_model.md  api_local_launch_guide.md  api_migration_notes.md  api_request_validation_contract.md  api_versioning_policy.md  application_domain_benchmarks.md  application_domain_benchmarks.zh-CN.md  application_domain_registry.md  application_domain_registry.zh-CN.md  artifact_contracts.md  backend_capability_report.md  backend_capability_report.zh-CN.md  backend_evidence_review_decision.md  (+243 more)
examples/: README.md  example_01_nanoparticle_gap_plasmon.py  example_02_asymmetric_gold_cross.py  example_03_lumerical_fdtd_scattering.py  example_04_comsol_mode_analysis.py  example_05_lorentzian_fitting.py  example_06_meep_nanoparticle.py  examples_manifest.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
scripts/: audit_sub_agents.py  audit_validation_claims.py  bootstrap_demo_env.sh  check_adapter_native_golden.py  check_api_fixtures.py  check_artifact_contracts.py  check_cli_surface.py  check_docs_consistency.py  check_optional_solver_readiness.py  check_release_readiness.py  demo_agent_studio.sh  evaluate_application_domain_benchmarks.py  (+27 more)
(+960 files in other folders)
