[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optical-spec-agent"
version = "0.2.0"
description = "Optical design spec agent – converts natural language into validated simulation specs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "optical-spec-agent team"}]

dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]

[project.scripts]
optical-spec = "optical_spec_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/optical_spec_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
