[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optical-spec-agent"
version = "0.9.0rc5.dev0"
description = "Optical design spec agent – converts natural language into validated simulation specs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "optical-spec-agent team"}]

dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "build>=1.2",
    "twine>=5.0",
]

[project.scripts]
optical-spec = "optical_spec_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/optical_spec_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "meep: tests that require a local Meep installation",
    "solver_optional: optional open-source solver validation, skipped by default unless explicitly enabled",
    "external_solver: tests that require an external solver installation",
    "manual_validation: manual validation only, not part of default CI or smoke",
    "external_llm: tests that require an external LLM provider or network access",
    "slow: tests that are intentionally longer-running local diagnostics",
]

[tool.ruff]
line-length = 100
target-version = "py311"
